# mcp-streamlit-agent

./: .gitignore  Makefile  README.md  app.py  prd.md  pyproject.toml  pytest.ini  run.sh  test_weather_client.py  test_weather_client_sse.py
adapters/: __init__.py  weather_server.py
configs/: default.json
mcp_servers/: README.md  retriever_server.py  weather_server.py
utils/: callbacks.py  event_loop.py  langgraph_output.py  stream_handlers.py  stream_types.py
